[package]
name = "crypt2web-core"
version = "0.1.0"
authors = ["Andrea Corbellini <corbellini.andrea@gmail.com>"]
license = "Apache-2.0"
description = "Tool for encrypting content that can be decrypted in a web browser (core library)"
readme = "../README.md"
homepage = "https://github.com/andreacorbellini/crypt2web"
repository = "https://github.com/andreacorbellini/crypt2web"
keywords = ["crypto", "cryptography"]
categories = ["cryptography"]
edition = "2021"

[dependencies]
chacha20poly1305 = { version = "0.10" }
hmac             = { version = "0.8" }
pbkdf2           = { version = "0.4" }
rand             = { version = "0.8" }
sha2             = { version = "0.9" }

[dev-dependencies]
base64           = { version = "0.12" }
itertools        = { version = "0.10" }
